# dhurandhar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  render.yaml
.github/workflows/: ci.yml
agents/: constitution.md
agents/roles/: aegis.md  atlas.md  chronicle.md  deployer.md  engineer.md  forge.md  monitor.md  policy.md  prism.md  product_manager.md  qa.md  reviewer.md  rivet.md  sentinel.md  shipwright.md
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: domain.py
backend/app/services/: company.py  event_store.py  orchestrator.py  runtime.py
backend/tests/: conftest.py  test_api.py  test_company.py  test_event_store.py  test_orchestrator_evidence.py  test_policy_gate.py  test_runtime.py
benchmarks/: README.md  replay-ordering.json
docs/: ARCHITECTURE.md  CLEAN_MACHINE_AUDIT.md  FIDELITY_LEDGER.md  LIVE_EVIDENCE.md  RELEASE_NOTES.md  SUBMISSION.md  VIDEO_SHOT_LIST.md  VISUAL_SPEC.md
docs/submissions/: buildweek.md  namastedev.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  LandingPage.test.tsx  LandingPage.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
output/evidence/: codex-live-run-2026-07-15.jsonl  (+1 more)
scripts/: check_submission.py
video/: README.md  capture-manifest.json  package-lock.json  package.json  tsconfig.json
video/scripts/: capture.mjs
(+36 files in other folders)
