[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dhurandhar-backend"
version = "0.1.0"
description = "Auditable autonomous software delivery demo backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.128.0",
  "pydantic==2.12.5",
  "uvicorn[standard]>=0.35,<1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
